@@ -516,10 +516,14 @@ fi
 %{__prefix}/include/popt.h
 
 %changelog
-* Tue Jun  4 2002 Jeff Johnson <jbj@redhat.com>
+* Wed Jun  5 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.23
+- python: portability fiddles (#54350).
+- check inodes (but not blocks) on FAT file systems (#64256).
+
+* Tue Jun  4 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.22
 - use /etc/rpm/platform (if it exists), rather than uname(2), for arch.
 
-* Mon Jun  3 2002 Jeff Johnson <jbj@redhat.com>
+* Mon Jun  3 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.21
 - python: include rpmdb module, renamed from bsddb3.
 
 * Sat Jun  1 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.20
